[package]
name = "almighty-push"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Automated jj stack pusher and PR creator for GitHub"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "color"] }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[[bin]]
name = "almighty-push"
path = "src/main.rs"